add, delete, get data works
